--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "/postgres-data"
   ],
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "@isaacs/express-prometheus-middleware": "^1.2.1",
     "@prisma/client": "^5.14.0",
     "@remix-run/css-bundle": "^2.9.2",
