--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="postgres://glass_e317_staging:83ZtmpSS3dTM7iq@glass-e317-staging-db.flycast:5432/glass_e317_staging?sslmode=disable
+DATABASE_URL="postgres://glass_e317_staging:83ZtmpSS3dTM7iq@glass-e317-staging-db.flycast:5432/glass_e317_staging?sslmode=disable"
 SESSION_SECRET="super-duper-s3cret"
