--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL="postgres://glass_e317:UlW7cSRh0xoA9CP@glass-e317-db.flycast:5432/glass_e317?sslmode=disable"
+DATABASE_URL="postgres://glass_e317:PTkwgvwIGpCoUhX@glass-e317-db.flycast:5432/glass_e317?sslmode=disable"
 SESSION_SECRET="super-duper-s3cret"
 
